fix: add push action

--- a/.github/workflows/s3-scripts-test.yml
+++ b/.github/workflows/s3-scripts-test.yml
@@ -5,6 +5,9 @@ on:
       s3_directory:
         description: 'test hosted skill script'
         required: true
+  push:
+    branches:
+      - test
 
 jobs:
   printInputs:
