fix: removed semicolon

--- a/.github/workflows/s3-scripts-test.yml
+++ b/.github/workflows/s3-scripts-test.yml
@@ -5,18 +5,13 @@ on:
       s3_directory:
         description: 'test hosted skill script'
         required: true
-  push:
-    branches:
-      - test
-    paths-ignore:
-      - '**.md'
 
 jobs:
   printInputs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-      echo "S3 directory: ${{ github.event.inputs.s3_directory }}"
+      echo "S3 directory ${{ github.event.inputs.s3_directory }}"
 
   build:
 
