fix: run functional test for S3 scripts

--- a/.github/workflows/s3-scripts-test.yml
+++ b/.github/workflows/s3-scripts-test.yml
@@ -14,30 +14,25 @@ jobs:
         echo "S3 directory ${{ github.event.inputs.s3_directory }}"
 
   build:
-
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        node: [12]
+   
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node }}
+    - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node }}
-    - name: Set up Python 3.x
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+        node-version: '12.x'
+    - run: git config --global user.email "ask-cli-test@amazon.com"
+    - run: git config --global user.name "Ask Cli Test"
     - run: npm install
     - run: npm link
-    - run: npm run integration-test
+    - run: npm run functional-test
       env:
-        ASK_VENDOR_ID: test
-        ASK_REFRESH_TOKEN: test
-        AWS_ACCESS_KEY_ID: test
-        AWS_SECRET_ACCESS_KEY: test
+        ASK_VENDOR_ID: ${{ secrets.ASK_VENDOR_ID }}
+        ASK_REFRESH_TOKEN: ${{ secrets.ASK_REFRESH_TOKEN }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        DEBUG: true
         ASK_S3_SCRIPTS_BASE_URL: ${{ github.event.inputs.s3_directory }}
 
