--- a/.github/workflows/s3-scripts-test.yml
+++ b/.github/workflows/s3-scripts-test.yml
@@ -5,15 +5,14 @@ on:
       s3_directory:
         description: 'test hosted skill script'
         required: true
-  push:
     branches:
-      - s3_scripts_test
+      - test
     paths-ignore:
       - '**.md'
 
 jobs:
   printInputs:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - run: |
         echo "Home $HOME"
@@ -21,7 +20,7 @@ jobs:
 
   build:
    
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -29,10 +28,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    - name: Set up Python 3.x
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
     - run: git config --global user.email "ask-cli-test@amazon.com"
     - run: git config --global user.name "Ask Cli Test"
     - run: npm install
