--- a/.github/workflows/s3-scripts-test.yml
+++ b/.github/workflows/s3-scripts-test.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   printInputs:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - run: |
         echo "S3 directory ${{ github.event.inputs.s3_directory }}"
